# iree-bare-metal-arm

./: .gitmodules  CMakeLists.txt  requirements-tools.txt  requirements.txt
build_tools/: configure_build.sh
samples/: CMakeLists.txt
samples/mobilenet_embedding/: CMakeLists.txt  README.txt  device_int_vmvx_sync.c  device_vmvx_sync.c  mobilenet_float.c  mobilenet_int.c
samples/static_library/: static_library_demo.c
